modification of html pages

--- a/insta/templates/main_pages/base.html
+++ b/insta/templates/main_pages/base.html
@@ -25,7 +25,10 @@
 
 <body>
     {% include "navbar.html" %}
-    {% block content %} {%endblock%}
+    {% block content %}
+    <body style="background: url(https://wallpapercave.com/wp/LBMmn3U.jpg); background-size: 100% 100%;">
+
+     {%endblock%}
 
     <footer>
         ...
