--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -49,9 +49,14 @@
     <div class="row" id="app">
         <div class="col-md-4"></div>
         <div class="col-md-2">
-            <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="blank"><img src="../../static/images/googleplaystore.jpeg"
+            <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="blank"><img src="../../static/images/apple2.jpg"
                     class="img-responsive" width="170px" height="60"></a>
         </div>
-       
+    <div class="col-md-2">
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3DW2MuQwAEAAGG4d3Vg8dWtULLuFZ4%26utm_content%3Dlo%26utm_medium%3Dbadge"
+            target="blank"><img src="../../static/images/android.png" class="img-responsive" width="160px" height="60"></a>
+    </div>
+    <div class="col-md-4"></div>
+        
     </div>
     {% endblock %}
